# dash-wallet

./: .gitignore  build.gradle
gradle/wrapper/: gradle-wrapper.properties
native-scrypt/: CMakeLists.txt  build.gradle
native-scrypt/src/main/: AndroidManifest.xml
native-x11/: CMakeLists.txt  build.gradle
native-x11/src/main/: AndroidManifest.xml
wallet/: build.gradle
wallet/src/de/schildbach/wallet/: WalletApplication.java
